[gd_scene format=3 uid="uid://cd4ouogidv7we"]

[ext_resource type="Texture2D" uid="uid://dfwwtit60wlts" path="res://icon.svg" id="1_67wbg"]
[ext_resource type="Script" uid="uid://doeld2s1sadjq" path="res://UI/GameMenu/SubMenus/EquipmentInfo/info_panel.gd" id="1_wh411"]

[node name="InfoPanel" type="MarginContainer" unique_id=1735042742 node_paths=PackedStringArray("buttons")]
offset_right = 325.0
offset_bottom = 409.0
size_flags_vertical = 3
theme_override_constants/margin_top = 10
script = ExtResource("1_wh411")
buttons = [NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/LHandButton"), NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/RHandButton"), NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/HeadButton"), NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button4"), NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button5"), NodePath("PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button6")]

[node name="PanelContainer2" type="PanelContainer" parent="." unique_id=1328033294]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2" unique_id=1614844977]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer" unique_id=1846083267]
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="PanelContainer2/MarginContainer/VBoxContainer" unique_id=708056663]
layout_mode = 2
size_flags_vertical = 0

[node name="Level" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer" unique_id=1812170636]
unique_name_in_owner = true
layout_mode = 2
text = "Level 1"

[node name="Control" type="Control" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer" unique_id=1131953305]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer" unique_id=665616056]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/MarginContainer/VBoxContainer" unique_id=1063141966]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Headshot" type="TextureRect" parent="PanelContainer2/MarginContainer/VBoxContainer" unique_id=601757859]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("1_67wbg")
expand_mode = 2
stretch_mode = 4
flip_h = true

[node name="FlowContainer2" type="FlowContainer" parent="PanelContainer2/MarginContainer/VBoxContainer" unique_id=856556698]
layout_mode = 2

[node name="Exp" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer2" unique_id=1113790378]
unique_name_in_owner = true
layout_mode = 2
text = "Experience 1000"

[node name="Control" type="Control" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer2" unique_id=2005613860]
custom_minimum_size = Vector2(100.8, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/FlowContainer2" unique_id=1498582453]
layout_mode = 2
text = "Exp to Level 1000"

[node name="Equipment" type="GridContainer" parent="PanelContainer2/MarginContainer/VBoxContainer" unique_id=733628877]
layout_mode = 2
columns = 2

[node name="LHandLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=560822286]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Hand"

[node name="LHandButton" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=589876325]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LHandGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/LHandButton" unique_id=150667641]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "None"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/LHandButton" unique_id=186401033]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.2206897
anchor_top = 0.5
anchor_right = 2.151724
anchor_bottom = 6.869565
offset_left = -20.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/LHandButton/PanelContainer" unique_id=219648466]
layout_mode = 2

[node name="GearList" type="VBoxContainer" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/LHandButton/PanelContainer/ScrollContainer" unique_id=438797919]
unique_name_in_owner = true
layout_mode = 2

[node name="RHandLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=357549659]
layout_mode = 2
text = "Right Hand"

[node name="RHandButton" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=979720738]
layout_mode = 2

[node name="RHandGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/RHandButton" unique_id=1102066679]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "None"
horizontal_alignment = 1

[node name="HeadLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=383914755]
layout_mode = 2
text = "Head"

[node name="HeadButton" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=2078726379]
layout_mode = 2

[node name="HeadGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/HeadButton" unique_id=2082455127]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "None"
horizontal_alignment = 1

[node name="ChestLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=693382980]
layout_mode = 2
text = "Chest"

[node name="Button4" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=1216619323]
layout_mode = 2

[node name="ChestGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button4" unique_id=1882046598]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "None"
horizontal_alignment = 1

[node name="FeetLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=820109031]
layout_mode = 2
text = "Boots"

[node name="Button5" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=1491438836]
layout_mode = 2

[node name="FeetGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button5" unique_id=786620537]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "None"
horizontal_alignment = 1

[node name="RingLabel" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=1941353048]
layout_mode = 2
text = "Ring"

[node name="Button6" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment" unique_id=7534306]
layout_mode = 2

[node name="RingGear" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer/Equipment/Button6" unique_id=203795452]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "None"
horizontal_alignment = 1
